packages/docs/content/docs/v7/usage/api/douyin.mdx
---
title: 抖音 API
description: 抖音平台 API 参考文档
---

# 抖音 API

抖音平台的所有 API 方法参考。

<Callout type="info">本页是 **SDK 方法**参考（19 个）。同一批端点的 **HTTP 形态**（路径、query 参数、响应信封、在线调用）见 [HTTP 端点参考](/docs/v7/usage/api/http/douyin) —— 那部分由 `packages/core/openapi.json` 生成，不手写。</Callout>

## 调用形式与单次请求配置

Client 中的绑定 Fetcher 使用 `client.douyin.fetcher.method(options, requestConfig?)`。第二个参数只作用于当前调用，并与 Client 的实例级请求配置合并；单次配置优先，`headers` 会单独合并。显式提供大写 `headers.Cookie` 时，它也会替换本次底层调用的 cookie 参数。

直接导出的裸 Fetcher 使用 `douyinFetcher.method(options, cookie?, requestConfig?)`。这里没有实例级配置，第三个参数会直接透传到当前请求。`amagi.douyinFetcher` 与该命名导出是同一个裸 Fetcher。

当第三个参数显式设置 `headers.Cookie` 时，第二个参数必须传入完全相同的字符串字面量；接口支持匿名时，请写作 `method(options, '', { headers: { Cookie: '' } })`。Cookie 头的大小写不敏感（`Cookie` 与 `cookie` 等价），签名器与绑定 cookie 的覆盖均能识别。

## Fetcher 方法

### fetchVideoWork

获取视频作品数据。

```ts twoslash
import amagi from '@ikenxuan/amagi'
const client = amagi({ cookies: { douyin: '' } })
// ---cut---
const result = await client.douyin.fetcher.fetchVideoWork({
  aweme_id: '1234567890123456789'
})
```

| 参数       | 类型     | 必填 | 说明     |
| ---------- | -------- | ---- | -------- |
| `aweme_id` | `string` | 是   | 作品 ID  |

---

### fetchImageAlbumWork

获取图集作品数据。

```ts twoslash
import amagi from '@ikenxuan/amagi'
const client = amagi({ cookies: { bilibili: '', douyin: '', kuaishou: '', xiaohongshu: '' } })
// ---cut---
const result = await client.douyin.fetcher.fetchImageAlbumWork({
  aweme_id: '1234567890123456789'
})
```

---

### fetchSlidesWork

获取合辑作品数据。

```ts twoslash
import amagi from '@ikenxuan/amagi'
const client = amagi({ cookies: { bilibili: '', douyin: '', kuaishou: '', xiaohongshu: '' } })
// ---cut---
const result = await client.douyin.fetcher.fetchSlidesWork({
  aweme_id: '1234567890123456789'
})
```

---

### fetchTextWork

获取文字作品数据。

```ts twoslash
import amagi from '@ikenxuan/amagi'
const client = amagi({ cookies: { bilibili: '', douyin: '', kuaishou: '', xiaohongshu: '' } })
// ---cut---
const result = await client.douyin.fetcher.fetchTextWork({
  aweme_id: '1234567890123456789'
})
```

---

### parseWork

聚合解析作品（自动识别视频/图集/合辑）。

```ts twoslash
import amagi from '@ikenxuan/amagi'
const client = amagi({ cookies: { bilibili: '', douyin: '', kuaishou: '', xiaohongshu: '' } })
// ---cut---
const result = await client.douyin.fetcher.parseWork({
  aweme_id: '1234567890123456789'
})
```

<Callout type="info">推荐使用 `parseWork` 方法，它会自动识别作品类型并返回相应数据。</Callout>

---

### fetchWorkComments

获取作品评论数据。

```ts twoslash
import amagi from '@ikenxuan/amagi'
const client = amagi({ cookies: { bilibili: '', douyin: '', kuaishou: '', xiaohongshu: '' } })
// ---cut---
const result = await client.douyin.fetcher.fetchWorkComments({
  aweme_id: '1234567890123456789',
  number: 20,
  cursor: 0
})
```

| 参数       | 类型     | 必填 | 说明     |
| ---------- | -------- | ---- | -------- |
| `aweme_id` | `string` | 是   | 作品 ID  |
| `number`   | `number` | 否   | 获取数量 |
| `cursor`   | `number` | 否   | 分页游标 |

---

### fetchCommentReplies

获取指定评论的回复数据。

```ts twoslash
import amagi from '@ikenxuan/amagi'
const client = amagi({ cookies: { bilibili: '', douyin: '', kuaishou: '', xiaohongshu: '' } })
// ---cut---
const result = await client.douyin.fetcher.fetchCommentReplies({
  aweme_id: '1234567890123456789',
  comment_id: '7123456789012345678',
  number: 20,
  cursor: 0
})
```

| 参数         | 类型     | 必填 | 说明     |
| ------------ | -------- | ---- | -------- |
| `aweme_id`   | `string` | 是   | 作品 ID  |
| `comment_id` | `string` | 是   | 评论 ID  |
| `number`     | `number` | 否   | 获取数量 |
| `cursor`     | `number` | 否   | 分页游标 |

---

### fetchUserProfile

获取用户主页数据。

```ts twoslash
import amagi from '@ikenxuan/amagi'
const client = amagi({ cookies: { bilibili: '', douyin: '', kuaishou: '', xiaohongshu: '' } })
// ---cut---
const result = await client.douyin.fetcher.fetchUserProfile({
  sec_uid: 'MS4wLjABAAAAxxxxxxxx'
})
```

---

### fetchUserVideoList

获取用户主页视频列表。

```ts twoslash
import amagi from '@ikenxuan/amagi'
const client = amagi({ cookies: { bilibili: '', douyin: '', kuaishou: '', xiaohongshu: '' } })
// ---cut---
const result = await client.douyin.fetcher.fetchUserVideoList({
  sec_uid: 'MS4wLjABAAAAxxxxxxxx'
})
```

| 参数      | 类型     | 必填 | 说明         |
| --------- | -------- | ---- | ------------ |
| `sec_uid` | `string` | 是   | 用户 sec_uid |

---

### fetchUserFavoriteList

获取用户主页点赞作品列表。

```ts twoslash
import amagi from '@ikenxuan/amagi'
const client = amagi({ cookies: { douyin: '' } })
// ---cut---
const result = await client.douyin.fetcher.fetchUserFavoriteList({
  sec_uid: 'MS4wLjABAAAAxxxxxxxx'
})
```

| 参数      | 类型     | 必填 | 说明         |
| --------- | -------- | ---- | ------------ |
| `sec_uid` | `string` | 是   | 用户 sec_uid |

---

### fetchUserRecommendList

获取用户主页推荐作品列表。

```ts twoslash
import amagi from '@ikenxuan/amagi'
const client = amagi({ cookies: { douyin: '' } })
// ---cut---
const result = await client.douyin.fetcher.fetchUserRecommendList({
  sec_uid: 'MS4wLjABAAAAxxxxxxxx'
})
```

| 参数      | 类型     | 必填 | 说明         |
| --------- | -------- | ---- | ------------ |
| `sec_uid` | `string` | 是   | 用户 sec_uid |

---

### searchContent

搜索内容。

```ts twoslash
import amagi from '@ikenxuan/amagi'
const client = amagi({ cookies: { bilibili: '', douyin: '', kuaishou: '', xiaohongshu: '' } })
// ---cut---
// 综合搜索
const result = await client.douyin.fetcher.searchContent({
  query: '关键词',
  type: 'general',
  number: 20
})

// 用户搜索
const userResult = await client.douyin.fetcher.searchContent({
  query: '关键词',
  type: 'user'
})

// 视频搜索
const videoResult = await client.douyin.fetcher.searchContent({
  query: '关键词',
  type: 'video'
})
```

| 参数        | 类型                             | 必填 | 说明              |
| ----------- | -------------------------------- | ---- | ----------------- |
| `query`     | `string`                         | 是   | 搜索关键词        |
| `type`      | `'general' \| 'user' \| 'video'` | 否   | 搜索类型          |
| `number`    | `number`                         | 否   | 获取数量          |
| `search_id` | `string`                         | 否   | 搜索 ID（分页用） |

---

### fetchSuggestWords

获取热点词/搜索建议。

```ts twoslash
import amagi from '@ikenxuan/amagi'
const client = amagi({ cookies: { bilibili: '', douyin: '', kuaishou: '', xiaohongshu: '' } })
// ---cut---
const result = await client.douyin.fetcher.fetchSuggestWords({
  query: '关键词'
})
```

| 参数    | 类型     | 必填 | 说明       |
| ------- | -------- | ---- | ---------- |
| `query` | `string` | 是   | 搜索关键词 |

---

### fetchMusicInfo

获取音乐数据。

```ts twoslash
import amagi from '@ikenxuan/amagi'
const client = amagi({ cookies: { bilibili: '', douyin: '', kuaishou: '', xiaohongshu: '' } })
// ---cut---
const result = await client.douyin.fetcher.fetchMusicInfo({
  music_id: '7123456789012345678'
})
```

---

### fetchLiveRoomInfo

获取直播间信息。

```ts twoslash
import amagi from '@ikenxuan/amagi'
const client = amagi({ cookies: { bilibili: '', douyin: '', kuaishou: '', xiaohongshu: '' } })
// ---cut---
const result = await client.douyin.fetcher.fetchLiveRoomInfo({
  room_id: '7123456789',
  web_rid: 'xxx'
})
```

| 参数      | 类型     | 必填 | 说明             |
| --------- | -------- | ---- | ---------------- |
| `room_id` | `string` | 是   | 直播间 ID        |
| `web_rid` | `string` | 是   | 直播间真实房间号 |

---

### fetchDanmakuList

获取弹幕数据。

```ts twoslash
import amagi from '@ikenxuan/amagi'
const client = amagi({ cookies: { bilibili: '', douyin: '', kuaishou: '', xiaohongshu: '' } })
// ---cut---
const result = await client.douyin.fetcher.fetchDanmakuList({
  aweme_id: '1234567890123456789',
  duration: 60000,
  start_time: 0,
  end_time: 60000
})
```

| 参数         | 类型     | 必填 | 说明             |
| ------------ | -------- | ---- | ---------------- |
| `aweme_id`   | `string` | 是   | 作品 ID          |
| `duration`   | `number` | 是   | 视频时长（毫秒） |
| `start_time` | `number` | 否   | 开始时间（毫秒） |
| `end_time`   | `number` | 否   | 结束时间（毫秒） |

---

### requestLoginQrcode

申请登录二维码。

```ts twoslash
import amagi from '@ikenxuan/amagi'
const client = amagi({ cookies: { bilibili: '', douyin: '', kuaishou: '', xiaohongshu: '' } })
// ---cut---
const result = await client.douyin.fetcher.requestLoginQrcode({
  verify_fp: 'verify_xxx'
})
```

| 参数        | 类型     | 必填 | 说明    |
| ----------- | -------- | ---- | ------- |
| `verify_fp` | `string` | 是   | fp 指纹 |

---

### requestPassportQrcode

申请 passport 扫码登录二维码（v6 passport 原始封装）。

> ⚠️ **已废弃（@deprecated）**：新写法请用 `client.douyin.login.qrcode()` —— v7 会话抽象（取码 / 轮询 / challenge 由引擎编排，`expire_time` 秒转 `expiresAt` 毫秒）。此方法保留仅作兼容。

```ts twoslash
import { douyinFetcher } from '@ikenxuan/amagi'
// ---cut---
const result = await douyinFetcher.requestPassportQrcode(undefined, 'session cookie')
```

---

### checkPassportQrcode

轮询 passport 扫码登录状态。

> ⚠️ **已废弃（@deprecated）**：新写法请用 `client.douyin.login`（轮询循环由引擎接管，challenge 自动编排）。

```ts twoslash
import { douyinFetcher } from '@ikenxuan/amagi'
// ---cut---
const result = await douyinFetcher.checkPassportQrcode({ token: 'xxx' }, 'session cookie')
```

---

### sendPassportVerifyCode

发送短信验证码（passport 二次验证）。

> ⚠️ **已废弃（@deprecated）**：新写法请用 `client.douyin.login`（验证方式自动挑选与回传）。

```ts twoslash
import { douyinFetcher } from '@ikenxuan/amagi'
// ---cut---
// 先取码，再轮询到 status: 'verify'；验证上下文与 cookie 都必须原样传回
const qrcode = await douyinFetcher.requestPassportQrcode()
const token = qrcode.success ? qrcode.data.token : ''
const cookie = qrcode.success ? qrcode.data.cookie : ''

const status = await douyinFetcher.checkPassportQrcode({ token }, cookie)
if (status.success && status.data.status === 'verify') {
  const sent = await douyinFetcher.sendPassportVerifyCode(
    { verify: status.data.verify }, // verify_way 可选，缺省自动挑选可收码的方式
    cookie
  )
  if (sent.success) {
    console.log(sent.data.mobile) // 脱敏手机号，如 138****8000
    console.log(sent.data.biz_trace_id) // 提交验证码时必须传回同一个值
  }
}
```

---

### validatePassportVerifyCode

提交短信验证码完成登录。

> ⚠️ **已废弃（@deprecated）**：新写法请用 `client.douyin.login`。

```ts twoslash
import { douyinFetcher } from '@ikenxuan/amagi'
// ---cut---
// biz_trace_id 必须与发码时用的是同一个
const qrcode = await douyinFetcher.requestPassportQrcode()
const token = qrcode.success ? qrcode.data.token : ''
const cookie = qrcode.success ? qrcode.data.cookie : ''

const status = await douyinFetcher.checkPassportQrcode({ token }, cookie)
if (status.success && status.data.status === 'verify') {
  const sent = await douyinFetcher.sendPassportVerifyCode({ verify: status.data.verify }, cookie)
  if (sent.success) {
    const validated = await douyinFetcher.validatePassportVerifyCode(
      {
        verify: status.data.verify,
        code: '123456', // 用户收到的 6 位验证码
        biz_trace_id: sent.data.biz_trace_id
      },
      cookie
    )
    if (validated.success && !validated.data.wrongCode) {
      console.log('登录完成', validated.data.cookie) // cookie 已含登录凭证
    }
  }
}
```

---

### fetchEmojiList

获取 Emoji 列表。

```ts twoslash
import amagi from '@ikenxuan/amagi'
const client = amagi({ cookies: { bilibili: '', douyin: '', kuaishou: '', xiaohongshu: '' } })
// ---cut---
const result = await client.douyin.fetcher.fetchEmojiList({})
```

---

### fetchDynamicEmojiList

获取动态表情列表。

```ts twoslash
import amagi from '@ikenxuan/amagi'
const client = amagi({ cookies: { bilibili: '', douyin: '', kuaishou: '', xiaohongshu: '' } })
// ---cut---
const result = await client.douyin.fetcher.fetchDynamicEmojiList({})
```
